[project]
name = "customer-segmentation"
version = "0.1.0"
description = ""
authors = [
    {name = "King-David",email = "ajanakingdavid@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.2.5,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "mlflow (>=2.22.0,<3.0.0)"
]

[tool.poetry]
packages = [{include = "customer_segmentation", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
